Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

 o added I_QueueSizeListener to listen to changes in size of a queue

 o Bugfix: Reconfiguration of client reconnect (same pubSessionId)
   supports now queue properties and sync/async reconfiguration
   (with or without a client side callback server)

 o Extended forceQueing=true support for PtP messages sent to a
   specific session which does not yet exist.
   This will automatically establish a callback session queue for
   the destination

 o Added support for a sync connected client to reconnect
   in async mode (by providing a callback address).
   Sync connected clients may receive PtP messages which are
   stored in their session queue until the client reconnects
   with a callback address and the queued messages are delivered.
   Switching an async client on the fly to sync mode 
   (by reconnecting without a callback address) is currently not supported.
 
 o XmlScriptInterpreter now uses a Reader (InputStream was starting
   processing AFTER reading whole stream).
  
 o added persistent session+subscription support in c++

 o Global.detachJdbcManagerCommonTable() removed (was obsolete)

 o the EntryFactories are now threadsafe and the Global.getEntryFactory now
   does not take any name and the factory is a singleton. EntryFactory.getName
   does not exist anymore. I_StoragePlugin.getType can be used instead
 
 o added XmlScriptInterpreter which can execute xmlBlaster commands from an
   xml file (in a way similar to ant, maven and jelly)

 o Nested key tags are now allowed inside key
 
 o added a new class EncodableData (ClientProperty now extends from it)
  
 o elimintated MsgTopicErrorHandler since used nowere

 o Changed build.xml for C and C++ compilation
   Now the source files are copied to a separate destination
   To build C or C++ do a cleanup first (before you checkout the new code):
     build c-delete
     build cpp-delete